--- a/app/css/main.scss
+++ b/app/css/main.scss
@@ -174,7 +174,7 @@ header ul {
 }
 
 .header-area .main-header-area .Appointment .book_btn a {
-  background: #28AE60;
+  background: #FD9801;
   padding: 12px 26px;
   font-size: 14px;
   font-weight: 400;
@@ -192,9 +192,9 @@ header ul {
 }
 
 .header-area .main-header-area .Appointment .book_btn a:hover {
-  background: #28AE60;
+  background: #FD9801;
   color: #fff;
-  border: 1px solid #28AE60;
+  border: 1px solid #FD9801;
 }
 
 .header-area .main-header-area .main-menu {
@@ -259,7 +259,7 @@ header ul {
 }
 
 .header-area .main-header-area .main-menu ul li a:hover {
-  color: #28AE60;
+  color: #FD9801;
 }
 
 .header-area .main-header-area .main-menu ul li .submenu {
@@ -361,7 +361,7 @@ header ul {
   margin-right: 12px;
 }
 .header-area .header-top_area .social_media_links a:hover {
-  color: #28AE60;
+  color: #FD9801;
 }
 
 .header-area .header-top_area .short_contact_list {
@@ -393,7 +393,7 @@ header ul {
 
 .header-area .header-top_area .short_contact_list ul li a i,
 .header-area .header-top_area .short_contact_list ul li a svg{
-  color: #28AE60;
+  color: #FD9801;
   margin-right: 7px;
 }
 @media (max-width: 767px) {
@@ -421,11 +421,11 @@ header ul {
 
 .slicknav_menu .slicknav_nav a:hover {
   background: transparent;
-  color: #28AE60;
+  color: #FD9801;
 }
 
 .slicknav_menu .slicknav_nav a.active {
-  color: #28AE60;
+  color: #FD9801;
 }
 
 @media (max-width: 767px) {
@@ -608,7 +608,7 @@ header ul {
   }
 }
 .boxed-btn3 {
-  background: #28AE60;
+  background: #FD9801;
   display: inline-block;
   padding: 14px 27px;
   font-family: "Poppins", sans-serif;
