--- a/app/css/main.scss
+++ b/app/css/main.scss
@@ -87,9 +87,9 @@ header img{
 }
 
 
-@import url("https://fonts.googleapis.com/css?family=Poppins:200,200i,300,300i,400,400i,500,500i,600,600i,700&display=swap");
+//@import url("https://fonts.googleapis.com/css?family=Roboto:200,200i,300,300i,400,400i,500,500i,600,600i,700&display=swap");
 body {
-  font-family: "Poppins", sans-serif;
+  // font-family: "Roboto", sans-serif;
   font-weight: normal;
   font-style: normal;
 }
