--- a/app/css/main.scss
+++ b/app/css/main.scss
@@ -763,5 +763,11 @@ section .section-title {
     margin-bottom: 10px;
   }
 }
+.polosa{
+  background-image: url(../img/polosa5.png);
+  background-position: bottom;
+  background-repeat: no-repeat;
+  padding-bottom:300px
+}
 
 
