--- a/app/css/main.scss
+++ b/app/css/main.scss
@@ -9,10 +9,10 @@ $fa-font-path:  "../fonts";
 @import "node_modules/@fortawesome/fontawesome-free/scss/fontawesome";
 @import "slicknav";
 @import "themify-icons";
-header {
-  position: fixed; z-index: 10; width: 100%;
-  -webkit-transform: translateZ(0);
-}
+//header {
+//  position: fixed; z-index: 10; width: 100%;
+//  -webkit-transform: translateZ(0);
+//}
 
 header.large img{
   height: 80px;
