--- a/app/css/main.scss
+++ b/app/css/main.scss
@@ -703,66 +703,210 @@ section .section-title {
   text-transform: uppercase;
 }
 
-#footer h5{
-  padding-left: 10px;
-  border-left: 3px solid #eeeeee;
-  padding-bottom: 6px;
-  margin-bottom: 20px;
-  color:#ffffff;
-}
-#footer a {
-  color: #ffffff;
-  text-decoration: none !important;
-  background-color: transparent;
-  -webkit-text-decoration-skip: objects;
-}
-#footer ul.social li{
-  padding: 3px 0;
-}
-#footer ul.social li a i {
-  margin-right: 5px;
-  font-size:25px;
-  -webkit-transition: .5s all ease;
-  -moz-transition: .5s all ease;
-  transition: .5s all ease;
-}
-#footer ul.social li:hover a i {
-  font-size:30px;
-  margin-top:-10px;
-}
-#footer ul.social li a,
-#footer ul.quick-links li a{
-  color:#ffffff;
-}
-#footer ul.social li a:hover{
-  color:#eeeeee;
-}
-#footer ul.quick-links li{
-  padding: 3px 0;
-  -webkit-transition: .5s all ease;
-  -moz-transition: .5s all ease;
-  transition: .5s all ease;
-}
-#footer ul.quick-links li:hover{
-  padding: 3px 0;
-  margin-left:5px;
-  font-weight:700;
-}
-#footer ul.quick-links li a i{
-  margin-right: 5px;
-}
-#footer ul.quick-links li:hover a i {
-  font-weight: 700;
-}
+/* Normal desktop :1200px. */
+$large_device:'(min-width: 1200px) and (max-width: 1500px)';
 
-@media (max-width:767px){
-  #footer h5 {
-    padding-left: 0;
-    border-left: transparent;
-    padding-bottom: 0px;
-    margin-bottom: 10px;
+/* Normal desktop :992px. */
+$mid_device:'(min-width: 992px) and (max-width: 1200px)';
+
+/* Tablet desktop :768px. */
+$tablet_device:'(min-width: 768px) and (max-width: 991px)';
+
+/* small mobile :320px. */
+$mobile_device:'(max-width: 767px)';
+
+/* Large Mobile :480px. */
+$large_mobile:'only screen and (min-width: 480px) and (max-width: 767px)';
+
+.footer{
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  .footer_top{
+    padding-top: 40px;
+    padding-bottom: 129px;
+    background: #475153;
+    @media #{$mobile_device} {
+      //padding-top: 60px;
+      padding-bottom: 30px;
+    }
+    .footer_widget{
+      @media #{$mobile_device} {
+        margin-bottom: 30px;
+      }
+      @media #{$tablet_device} {
+        margin-bottom: 30px;
+      }
+      .footer_title{
+        font-size: 22px;
+        font-weight: 400;
+        color: #fff;
+        text-transform: capitalize;
+        margin-bottom: 40px;
+        @media #{$mobile_device} {
+          margin-bottom: 20px;
+        }
+      }
+      .footer_logo{
+        font-size: 22px;
+        font-weight: 400;
+        color: #fff;
+        text-transform: capitalize;
+        margin-bottom: 40px;
+        @media #{$mobile_device} {
+          margin-bottom: 20px;
+        }
+        img{
+          width: 100px;
+        }
+      }
+      p{
+        color: #C7C7C7;
+      }
+      p.footer_text{
+        font-size: 16px;
+        color: #B2B2B2;
+        margin-bottom: 23px;
+        font-weight: 400;
+        line-height: 28px;
+        a.domain{
+          color: #B2B2B2;
+          font-weight: 400;
+          &:hover{
+            color: #28AE60;
+            border-bottom: 1px solid #28AE60
+          }
+        }
+        &.doanar{
+          a{
+            font-weight: 500;
+            color: #B2B2B2;
+
+            &:hover{
+              color: #28AE60;
+              border-bottom: 1px solid #28AE60
+            }
+            &.first{
+              margin-bottom: 10px;
+            }
+          }
+
+        }
+      }
+      ul{
+        margin: 0;
+        padding: 0;
+        li{
+          color: #C7C7C7;
+          font-size: 13px;
+          line-height: 42px;
+          list-style: none;
+          a{
+            color: #C7C7C7;
+            &:hover{
+              color: #FD9801;
+            }
+          }
+        }
+      }
+      .newsletter_form{
+        position: relative;
+        margin-bottom: 20px;
+        input{
+          width: 100%;
+          height: 45px;
+          background: #fff;
+          padding-left: 20px;
+          font-size: 16px;
+          color: #000;
+          border: none;
+          &::placeholder{
+            font-size: 16px;
+            color: #919191;
+          }
+        }
+        button{
+          position: absolute;
+          top: 0;
+          right: 0;
+          height: 100%;
+          border: none;
+          font-size: 14px;
+          color: #fff;
+          background: #28AE60;
+          padding: 10px;
+          padding: 0 22px;
+          cursor: pointer;
+        }
+      }
+      .newsletter_text{
+        font-size: 16px;
+        color: #BABABA;
+      }
+    }
+  }
+  .copy-right_text{
+    padding-bottom: 30px;
+    background: #1F1F1F;
+    .footer_border{
+      padding-bottom: 30px;
+    }
+    .copy_right{
+      font-size: 13px;
+      color:#C7C7C7;
+      margin-bottom: 0;
+      font-weight: 400;
+      @media #{$mobile_device} {
+        font-size: 13px;
+      }
+      a{
+        color: #fd9801;
+      }
+    }
+  }
+  .socail_links{
+    margin-top: 47px;
+    @media #{$mobile_device} {
+      margin-top: 30px;
+    }
+    ul{
+      li{
+        display: inline-block;
+
+        a{
+          font-size: 18px;
+          color: #FD9801;
+          width: 40px;
+          height: 40px;
+          display: inline-block;
+          text-align: center;
+          background: #2C2C2C;
+          @include border-radius(50%);
+          line-height: 40px !important;
+          margin-right: 7px;
+          line-height: 41px !important;
+          &:hover{
+            color: #fff !important;
+            background: #FD9801;
+            text-decoration: none;
+          }
+        }
+      }
+    }
   }
 }
+
+
+
+
+
+
+
+
+
+
+
 .polosa{
   background-image: url(../img/polosa5.png);
   background-position: bottom;
