--- a/app/css/main.scss
+++ b/app/css/main.scss
@@ -524,15 +524,16 @@ header ul {
   background-image: url(../img/banner/banner.png);
 }
 
-.slider_bg_2 {
-  background-image: url(../img/IMG-20190628-WA0011a.jpg);
-}
-
+//.slider_bg_2 {
+//  background-image: url(../img/IMG-20190628-WA0011a.jpg);
+//}
+//
+//
 .slider_area .single_slider {
   height: 900px;
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: center center;
+  //background-size: cover;
+  //background-repeat: no-repeat;
+  //background-position: center center;
 }
 
 @media (max-width: 767px) {
@@ -683,14 +684,30 @@ header ul {
 .overlay2::before {
   position: absolute;
   content: "";
-  background-color: #2C2C2C;
+  //background-color: #2C2C2C;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
   z-index: -1;
-  opacity: 0.6;
+  //opacity: 0.6;
 }
+
+.overlay2::before {
+  background-image: url(../img/IMG-20190628-WA0011b.jpg);
+  height: 900px;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center center;
+  transition: transform 5s;
+}
+
+.overlay2:hover::before  {
+  transform: scale(1.1,1.1);
+
+}
+
+
 
 
 
@@ -970,17 +987,65 @@ $large_mobile:'only screen and (min-width: 480px) and (max-width: 767px)';
 
 
 
-.masonry-container {
+.masonry { /* Masonry container */
+  -webkit-column-count: 4;
+  -moz-column-count:4;
+  column-count: 4;
+  -webkit-column-gap: 1em;
+  -moz-column-gap: 1em;
+  column-gap: 1em;
+  margin: 0;
   padding: 0;
-}
-.grid-sizer {
-  width: 25%;
-  float: left;
-  min-height: 1px;
+  -moz-column-gap: 1.5em;
+  -webkit-column-gap: 1.5em;
+  column-gap: 1.5em;
+  font-size: 0;
 }
 .item {
-  height: 33.34vh;
-}
-.item img {
+  display: inline-block;
+  background: #fff;
+  padding: 0;
+  margin: 0;
   width: 100%;
+  -webkit-transition:1s ease all;
+  //box-sizing: border-box;
+  //-moz-box-sizing: border-box;
+  //-webkit-box-sizing: border-box;
+  //box-shadow: 2px 2px 4px 0 #ccc;
+}
+.item img{max-width:100%; height: auto;}
+
+//.item:hover img {
+//  transform: scale(1.1,1.1);
+//  transition: transform 3s;
+//}
+
+@media only screen and (max-width: 320px) {
+  .masonry {
+    -moz-column-count: 1;
+    -webkit-column-count: 1;
+    column-count: 1;
+  }
+}
+
+@media only screen and (min-width: 321px) and (max-width: 768px){
+  .masonry {
+    -moz-column-count: 2;
+    -webkit-column-count: 2;
+    column-count: 2;
+  }
+}
+@media only screen and (min-width: 769px) and (max-width: 1200px){
+  .masonry {
+    -moz-column-count: 3;
+    -webkit-column-count: 3;
+    column-count: 3;
+  }
+}
+@media only screen and (min-width: 1201px) {
+  .masonry {
+    -moz-column-count: 4;
+    -webkit-column-count: 4;
+    column-count: 4;
+  }
 }
