--- a/app/css/main.scss
+++ b/app/css/main.scss
@@ -493,7 +493,7 @@ header ul {
   top: -33px;
 }
 .header_bottom_border {
-  border-bottom: 1px solid #4B4E50;
+  border-bottom: 1px solid #7F8284;
   padding-bottom: 22px;
 }
 
