--- a/app/css/main.scss
+++ b/app/css/main.scss
@@ -1081,7 +1081,7 @@ footer {
   left: 0;
   bottom: 0;
 }
-#portfolio, .promotext, .background-track, .card-slide1, .card-slide2, .card-slide3, .masonry, .comment, .main-page .footer_top_page .container{
+#portfolio, .promotext, .background-track, .card-slide1, .card-slide2, .card-slide3, .masonry, .comment, .main-page .footer_top_page .container, .card-div {
   visibility: hidden;
 }
 
