--- a/app/css/main.scss
+++ b/app/css/main.scss
@@ -10,6 +10,8 @@ $lead-font-weight: 400;
 
 @import "node_modules/bootstrap/scss/bootstrap";
 @import url('https://fonts.googleapis.com/css?family=Roboto:300,400&display=swap&subset=cyrillic');
+@import url('https://cdn.jsdelivr.net/npm/cookieconsent@3/build/cookieconsent.min.css');
+
 
 
 $fa-font-path:  "../fonts";
